# IpCamBox

./: .gitmodules  CMakeLists.txt  README.md  Systemd.hints
Common/: CMakeLists.txt  CommonTypes.h  Config.h  Hash.cpp  Hash.h  Keys.cpp  Keys.h  RefCounter.cpp  RefCounter.h
Daemon/: CMakeLists.txt  Daemon.cpp  Daemon.h  Log.cpp  Log.h
DeviceBox/: AuthConfig.h  CMakeLists.txt  CertificateProvider.cpp  CertificateProvider.h  Client.cpp  Client.h  Config.cpp  Config.h  Controller.cpp  Controller.h  DeviceBoxMain.cpp  DeviceBoxMain.h  Dropbox.cpp  Dropbox.h  DropboxFolder.cpp  DropboxFolder.h  Log.cpp  Log.h  SourceConfig.cpp  SourceConfig.h  SplitHandler.cpp  SplitHandler.h  StreamingHandler.cpp  StreamingHandler.h  finally_execute.h  string_format.h
DeviceBoxApp/: CMakeLists.txt  DeviceBox.service  main.cpp
GstUtils/: GstPtr.h
Protocol/: CMakeLists.txt  protocol.h  protocol.proto
Server/: CMakeLists.txt  Log.cpp  Log.h  ServerMain.cpp  ServerMain.h
Server/Config/: CMakeLists.txt  Config.h  Log.cpp  Log.h  MemoryConfig.cpp  MemoryConfig.h
Server/ControlServer/: CMakeLists.txt  Log.cpp  Log.h  Server.cpp  Server.h  ServerSession.cpp  ServerSession.h  Sessions.cpp  Sessions.h
Server/FileConfig/: CMakeLists.txt  Config.cpp  Config.h  ipcambox.config
Server/PGConfig/: CMakeLists.txt  Config.cpp  Config.h  PGPtr.h  Server.sql  test.sql
Server/RestreamServer/: CMakeLists.txt  Log.cpp  Log.h  Server.cpp  Server.h
ServerApp/: CMakeLists.txt  ServerApp.service  main.cpp
Test/: CMakeLists.txt  main.cpp
snap/: snapcraft.yaml
